Fix misaligned hover icons and texts on debug tab

--- a/modules/customize-ui.css
+++ b/modules/customize-ui.css
@@ -103,13 +103,17 @@
     font-size: var(--font-size-menu) !important;
 }
 
-.monaco-workbench .debug-viewlet .monaco-list-row .expression,
-.monaco-workbench .debug-hover-widget .monaco-list-row .expression,
-.monaco-workbench .debug-viewlet .monaco-list-row .expression,
-.monaco-workbench .debug-hover-widget .monaco-list-row .expression,
-.monaco-workbench.mac .debug-viewlet .monaco-list-row .expression,
-.monaco-workbench.mac .debug-hover-widget .monaco-list-row .expression {
+.debug-viewlet .debug-watch .monaco-list-row .expression,
+.debug-hover-widget .monaco-list-row .expression {
     font-size: var(--font-size-monospace) !important;
+}
+
+.debug-viewlet .debug-watch .monaco-list-row .expression,
+.debug-viewlet .debug-call-stack .monaco-list-row .session,
+.debug-viewlet .debug-call-stack .monaco-list-row .stack-frame,
+.debug-viewlet .debug-breakpoints .monaco-list-row .breakpoint {
+    /* Prevent texts from exceeding row height and making something misaligned */
+    height: var(--row-height) !important;
 }
 
 .customview-tree .monaco-tree .monaco-tree-row .custom-view-tree-node-item > .custom-view-tree-node-item-icon {
@@ -157,6 +161,10 @@
 
 .monaco-icon-label::before {
     height: auto !important;
+}
+
+.debug-viewlet .debug-call-stack .codicon-callstack-view-session::before {
+    vertical-align: middle;
 }
 
 .explorer-viewlet .explorer-item,
